--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "firebase": "^10.12.3",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
