--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
